Host Quilt and minigames on Android, and sign in to a Minecraft account (#8)
* docs(plans): plan mod loaders and mod resolution for Android

Android hosts vanilla, Paper and Pumpkin. Every other loader is refused by
name in `minecraft/jar.rs` because it installs by running an installer, and
that refusal has never been revisited.

Researching it turned up something worse than a missing feature: there is no
mod installation on Android at all. Not for Fabric, not for Paper. A server
configured with plugins on the dashboard starts on the phone without them,
silently, while `HostCapabilities` has declared `moddedServers = true` all
along.

The plan covers Fabric, NeoForge and modern Forge, and ports the desktop's
mod resolver into homerun-core rather than making a third hand-maintained
copy of it — `native-mod-support.md` already admits the two TypeScript
copies drift and must be fixed in lockstep.

Two findings shape it. The JVM is created through JNI, so there is no `java`
launcher to expand the `@argfiles` that Forge and NeoForge launch entirely
through; the core has to expand them itself. And a second Java runtime costs
a measured 62 MB compressed against a 103 MB baseline, which fits once and
not twice — so `plans/android.md`'s APK-size question reopens, and Java 17
is left as the open decision it forces.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01URGPr3C96rbth4SMBN8PD1

* feat(android): ship Java 21 and 25, and choose between them per server

M0 of plans/android-mod-loaders.md. Minecraft names a minimum Java version;
a mod loader wants an exact one, because modlauncher breaks on JDKs newer
than it was built against. One runtime cannot serve both, so this stages two
and lets homerun-core pick.

The rule is the lowest staged runtime that satisfies the jar, not the newest
available. Picking the newest is the intuitive rule and the wrong one: a
loader that wants 21 and gets 25 does not fail at se